[project]
name = "comfyui_dsp_imagehelpers"
description = "Nodes: DSP Image Concat"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/dave-palt/comfyui_DSP_imagehelpers"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_DSP_imagehelpers"
Icon = ""
